change scrollbar color on hover and active state, fix huge checkbox on firefox browser, remove hacky border-radius

--- a/static/css/custom_scrollbar.css
+++ b/static/css/custom_scrollbar.css
@@ -9,13 +9,17 @@ https://www.digitalocean.com/community/tutorials/css-scrollbars
   --scrollbar-width: 13px;
   --scrollbar-height: var(--scrollbar-width);
   --scrollbar-thumb-radius: 15px;
-  --scrollbar-button-color: #263a4e;
+  --scrollbar-thumb-color: #263a4e;
+  --scrollbar-thumb-hover-color: #324d67;
+  --scrollbar-thumb-active-color: #4c739a;
   --scrollbar-track-color: transparent;
 }
 
 @media (prefers-color-scheme: light){
   :root{
-    --scrollbar-button-color: #9ca3af;
+    --scrollbar-thumb-color: #9ca3af;
+    --scrollbar-thumb-hover-color: #808899;
+    --scrollbar-thumb-active-color: #5b6371;
     --scrollbar-track-color: transparent;
   }
 }
@@ -23,7 +27,7 @@ https://www.digitalocean.com/community/tutorials/css-scrollbars
 /* Works on Firefox */
 * {
   scrollbar-width: var(--scrollbar-width);
-  scrollbar-color: var(--scrollbar-button-color) var(--scrollbar-track-color);
+  scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -38,8 +42,14 @@ https://www.digitalocean.com/community/tutorials/css-scrollbars
   background-color: var(--scrollbar-track-color);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--scrollbar-button-color);
+  background-color: var(--scrollbar-thumb-color);
   border-radius: var(--scrollbar-thumb-radius);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbar-thumb-hover-color);
+}
+::-webkit-scrollbar-thumb:active {
+  background-color: var(--scrollbar-thumb-active-color);
 }
 ::-webkit-scrollbar-corner {
   background-color: transparent;
